--- a/etc/requirements.txt
+++ b/etc/requirements.txt
@@ -1,4 +1,13 @@
-Flask==2.2.3
-uWSGI==2.0.23
 bcrypt==4.1.2
-itsdangerous==2.1.2
+blinker==1.9.0
+click==8.3.0
+Flask==3.1.2
+flask-socketio==5.3.6
+python-socketio==5.11.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+Werkzeug==3.1.3
+gunicorn==21.2.0
+gevent==24.2.1
+gevent-websocket==0.10.1
